# chess-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  debug.sh  flake.nix  header.rs  install_stockfish.sh  run.sh  rust-analyzer.toml  rustfmt.toml  shell.nix
.direnv/: nix-profile-26.05-1ny7brxnqbx6xilj  nix-profile-26.05-1ny7brxnqbx6xilj.rc
final_report/: final-report.typ  refs.bib
final_report/output/: legal_masked_metrics_fixed.csv  legal_unmasked_metrics_annealing_fixed.csv  legal_unmasked_metrics_fixed.csv  pseudo_masked_metrics_fixed.csv  pseudo_unmasked_metrics_fixed.csv
src/: bitboard.rs  castling.rs  chess_board.rs  chess_game.rs  chess_move.rs  chess_piece.rs  chess_position.rs  chess_square.rs  data.rs  engine.rs  engine.rs.orig  lib.rs  main.rs  mcts.rs  model.rs  stockfish.rs  zobrist.rs
src/tests/: tests.rs
tests/: tests.rs
