[package]
name = "chess-engine"
version = "0.1.0"
edition = "2024"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[dependencies]
burn = { version = "0.21.0-pre.1", features = ["std", "tui", "train","wgpu", "fusion", "cuda", "ndarray"], default-features = false }
