[package]
name = "chess-engine"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = "symbols"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "target-cpu=native", "link-arg=-fuse-ld=mold"]

[features ]
default = ["wgpu"]
autotune = ["burn/autotune"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]

[dependencies]
arrayvec = "0.7.6"
burn = { version = "0.21.0-pre.1", features = ["std", "autodiff", "fusion", "train"], default-features = false }
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
log = {version = "0.4.29", features = ["release_max_level_off"]}
rand = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.11.0"
